--- a/src/main/resources/inventories/categories/blocks.yml
+++ b/src/main/resources/inventories/categories/blocks.yml
@@ -13,7 +13,7 @@
 #
 #########################################################################################################################################
 
-ame: "&e★ #5d8d50ʙʟᴏᴄᴋs &e★"
+ame: "&7Blocks"
 size: 54
 updateInterval: 1
 patterns:
@@ -25,25 +25,11 @@ items:
   grass_block:
     update: true
     item:
-      material: GRASS_BLOCK
+      material: GRASS
     type: ZSHOP_ITEM
     buyPrice: 2
     sellPrice: 1
     slot: 20
-    serverBuyLimit:
-      limit: 100
-      schedulerType: DAILY
-      hour: 20
-      minute: 55
-    lore:
-      - "&f» &7Buying price&8: &e%buyPrice%"
-      - "&f» &7Selling price&8: &e%sellPrice%"
-      - ""
-      - "&f» &7Server buy limit&8: &f%serverBuyAmount%&7/#d1d1d1%serverBuyLimit% &8(&7%zshop_limiter_time_server_buy_GRASS_BLOCK%&8)"
-      - ""
-      - "&f➥ &r&7Left click to &f&nʙᴜʏ"
-      - "&f➥ &r&7Click wheel (or drop key) to &f&nsᴇʟʟ ᴇᴠᴇʀʏᴛʜɪɴɢ"
-      - "&f➥ &r&7Right click to &f&nsᴇʟʟ"
   dirt:
     item:
       material: DIRT
@@ -52,22 +38,6 @@ items:
     buyPrice: 10.0
     sellPrice: 1.5
     slot: 21
-    update: true
-    serverSellLimit:
-      limit: 100
-      schedulerType: WEEKLY
-      day: "MONDAY"
-      hour: 18
-      minute: 00
-    lore:
-      - "&f» &7Buying price&8: &e%buyPrice%"
-      - "&f» &7Selling price&8: &e%sellPrice%"
-      - ""
-      - "&f» &7Server sell limit&8: &f%serverSellAmount%&7/#d1d1d1%serverSellLimit% &8(&7%zshop_limiter_time_server_sell_DIRT%&8)"
-      - ""
-      - "&f➥ &r&7Left click to &f&nʙᴜʏ"
-      - "&f➥ &r&7Click wheel (or drop key) to &f&nsᴇʟʟ ᴇᴠᴇʀʏᴛʜɪɴɢ"
-      - "&f➥ &r&7Right click to &f&nsᴇʟʟ"
   gravel:
     item:
       material: GRAVEL
@@ -75,30 +45,6 @@ items:
     buyPrice: 10.0
     sellPrice: 1
     slot: 22
-    update: true
-    playerSellLimit:
-      limit: 100
-      schedulerType: WEEKLY
-      day: "FRIDAY"
-      hour: 18
-      minute: 00
-    playerBuyLimit:
-      limit: 100
-      schedulerType: WEEKLY
-      day: "SUNDAY"
-      hour: 18
-      minute: 00
-    lore:
-      - "&f» &7Buying price&8: &e%buyPrice% &f%realBuyPrice% &ax%zshop_modifier_buy% &c%zshop_modifier_buy_percent%%"
-      - "&f» &7Selling price&8: &e%sellPrice% &f%realSellPrice% &ax%zshop_modifier_sell% &c+%zshop_modifier_sell_percent%%"
-      - ""
-      # - "&f» &7Server sell limit&8: &f%serverSellAmount%&7/#d1d1d1%serverSellLimit%"
-      - "&f» &7Player sell limit&8: &f%playerSellAmount%&7/#d1d1d1%playerSellLimit% &8(&7%zshop_limiter_time_player_sell_GRAVEL%&8)"
-      - "&f» &7Player buy limit&8: &f%playerBuyAmount%&7/#d1d1d1%playerBuyLimit% &8(&7%zshop_limiter_time_player_buy_GRAVEL%&8)"
-      - ""
-      - "&f➥ &r&7Left click to &f&nʙᴜʏ"
-      - "&f➥ &r&7Click wheel (or drop key) to &f&nsᴇʟʟ ᴇᴠᴇʀʏᴛʜɪɴɢ"
-      - "&f➥ &r&7Right click to &f&nsᴇʟʟ"
   sand:
     item:
       material: SAND
@@ -109,7 +55,8 @@ items:
     slot: 23
   red_sand:
     item:
-      material: RED_SAND
+      material: SAND
+      data: 1
     type: ZSHOP_ITEM
     economy: experience
     buyPrice: 10.0
@@ -132,21 +79,24 @@ items:
     slot: 30
   diorite:
     item:
-      material: DIORITE
+      material: STONE
+      data: 3
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
     slot: 31
   andesite:
     item:
-      material: ANDESITE
+      material: STONE
+      data: 5
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
     slot: 32
   granite:
     item:
-      material: GRANITE
+      material: STONE
+      data: 1
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -154,7 +104,7 @@ items:
   # Second page
   oak_log:
     item:
-      material: OAK_LOG
+      material: LOG
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -162,7 +112,8 @@ items:
     page: 2
   spruce_log:
     item:
-      material: SPRUCE_LOG
+      material: LOG
+      data: 1
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -170,7 +121,8 @@ items:
     page: 2
   birch_log:
     item:
-      material: BIRCH_LOG
+      material: LOG
+      data: 2
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -178,7 +130,8 @@ items:
     page: 2
   jungle_log:
     item:
-      material: JUNGLE_LOG
+      material: LOG
+      data: 3
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -186,7 +139,7 @@ items:
     page: 2
   acacia_log:
     item:
-      material: ACACIA_LOG
+      material: 162
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -194,7 +147,8 @@ items:
     page: 2
   dark_oak_log:
     item:
-      material: DARK_OAK_LOG
+      material: 162
+      data: 1
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -202,7 +156,7 @@ items:
     page: 2
   stone_bricks:
     item:
-      material: STONE_BRICKS
+      material: BRICK
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
@@ -224,92 +178,11 @@ items:
     sellPrice: 1.0
     slot: 32
     page: 2
-  dark_prismarine:
+  end_stone:
     item:
-      material: DARK_PRISMARINE
+      material: 121
     type: ZSHOP_ITEM
     buyPrice: 10.0
     sellPrice: 1.0
     slot: 33
     page: 2
-  # third page
-  end_stone:
-    item:
-      material: END_STONE
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 20
-    page: 3
-  end_stone_bricks:
-    item:
-      material: END_STONE_BRICKS
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 21
-    page: 3
-  purpur_block:
-    item:
-      material: PURPUR_BLOCK
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 22
-    page: 3
-  netherrack:
-    item:
-      material: NETHERRACK
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 23
-    page: 3
-  nether_bricks:
-    item:
-      material: NETHER_BRICKS
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 24
-    page: 3
-  red_nether_bricks:
-    item:
-      material: RED_NETHER_BRICKS
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 29
-    page: 3
-  basalt:
-    item:
-      material: BASALT
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 30
-    page: 3
-  blackstone:
-    item:
-      material: BLACKSTONE
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 31
-    page: 3
-  soul_sand:
-    item:
-      material: SOUL_SAND
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 32
-    page: 3
-  soul_soil:
-    item:
-      material: SOUL_SOIL
-    type: ZSHOP_ITEM
-    buyPrice: 10.0
-    sellPrice: 1.0
-    slot: 33
-    page: 3
