--- a/src/main/resources/inventories/categories/ores.yml
+++ b/src/main/resources/inventories/categories/ores.yml
@@ -13,7 +13,7 @@
 #
 #########################################################################################################################################
 
-name: "&e★ #d5d5d5ᴏʀᴇs &e★"
+name: "&7Ores"
 size: 54
 patterns:
   - "zshop_decoration"
@@ -58,7 +58,8 @@ items:
     slot: 24
   lapis_lazuli:
     item:
-      material: LAPIS_LAZULI
+      material: INK_SAC
+      data: 4
     type: ZSHOP_ITEM
     buyPrice: 5.0
     sellPrice: 0.25
@@ -70,25 +71,10 @@ items:
     buyPrice: 10.0
     sellPrice: 1.5
     slot: 30
-  netherite_ingot:
-    item:
-      material: NETHERITE_INGOT
-    type: ZSHOP_ITEM
-    buyPrice: 1000.0
-    sellPrice: 150.0
-    slot: 31
   redstone:
     item:
       material: REDSTONE
     type: ZSHOP_ITEM
     buyPrice: 4.0
     sellPrice: 0.25
-    slot: 32
-  amethyst_shard:
-    item:
-      material: AMETHYST_SHARD
-      amount: 32
-    type: ZSHOP_ITEM
-    buyPrice: 200.0
-    sellPrice: 20.0
-    slot: 33
+    slot: 31
