:memo: Add CoinsEngine economy

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -44,6 +44,7 @@ enableDebugTime: false
 # - PLAYERPOINTS (requires https://www.spigotmc.org/resources/playerpoints.80745/)
 # - VOTINGPLUGIN (requires https://www.spigotmc.org/resources/votingplugin.15358/)
 # - TOKENMANAGER (requires https://www.spigotmc.org/resources/tokenmanager.8610/)
+# - COINSENGINE (requires https://www.spigotmc.org/resources/84121/)
 defaultEconomy: "VAULT"
 
 # Default lore of ZSHOP_ITEM buttons
