--- a/pom.xml
+++ b/pom.xml
@@ -167,5 +167,12 @@
             <artifactId>item-nbt-api</artifactId>
             <version>2.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>su.nightexpress.coinsengine</groupId>
+            <artifactId>CoinsEngine</artifactId>
+            <version>2.0.9</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/CoinsEngine.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
