--- a/src/main/resources/economies.yml
+++ b/src/main/resources/economies.yml
@@ -18,6 +18,7 @@
 # - PLAYERPOINTS (requires https://www.spigotmc.org/resources/playerpoints.80745/)
 # - VOTINGPLUGIN (requires https://www.spigotmc.org/resources/votingplugin.15358/)
 # - TOKENMANAGER (requires https://www.spigotmc.org/resources/tokenmanager.8610/)
+# - COINSENGINE (requires https://www.spigotmc.org/resources/84121/)
 #
 #########################################################################################################################################
 
