--- a/src/main/resources/inventories/1_13/rank.yml
+++ b/src/main/resources/inventories/1_13/rank.yml
@@ -1,22 +1,7 @@
-#########################################################################################################################################
-#
-#  ███████╗░██████╗██╗░░██╗░█████╗░██████╗░
-#  ╚════██║██╔════╝██║░░██║██╔══██╗██╔══██╗
-#  ░░███╔═╝╚█████╗░███████║██║░░██║██████╔╝
-#  ██╔══╝░░░╚═══██╗██╔══██║██║░░██║██╔═══╝░
-#  ███████╗██████╔╝██║░░██║╚█████╔╝██║░░░░░
-#  ╚══════╝╚═════╝░╚═╝░░╚═╝░╚════╝░╚═╝░░░░░
-#
-# Documentation : https://zshop.groupez.dev/
-# Sponsor : https://serveur-minecraft-vote.fr/
-# zMenu Documentation : https://docs.zmenu.dev/
-#
-#########################################################################################################################################
-
 name: "&e★ &3ᴢsʜᴏᴘ &e★"
 size: 54
 patterns:
-  - "zshop_decoration"
+  - "zshop_decoration" # Pattern for the decoration of the inventory
 items:
   vip:
     item:
