--- a/src/main/resources/inventories/1_13/categories/blocks.yml
+++ b/src/main/resources/inventories/1_13/categories/blocks.yml
@@ -1,4 +1,4 @@
-#########################################################################################################################################
+####################################################
 #
 #  ███████╗░██████╗██╗░░██╗░█████╗░██████╗░
 #  ╚════██║██╔════╝██║░░██║██╔══██╗██╔══██╗
@@ -7,29 +7,46 @@
 #  ███████╗██████╔╝██║░░██║╚█████╔╝██║░░░░░
 #  ╚══════╝╚═════╝░╚═╝░░╚═╝░╚════╝░╚═╝░░░░░
 #
-# Documentation : https://zshop.groupez.dev/
-# Sponsor : https://serveur-minecraft-vote.fr/
-# zMenu Documentation : https://docs.zmenu.dev/
+#   zShop uses the zMenu API for inventory configurations.
+#   zMenu documentation : https://docs.zmenu.dev/
+#   zShop documentation : https://zshop.groupez.dev/
+#   Discord: https://discord.groupez.dev
+#   Sponsor: https://serveur-minecraft-vote.fr/
 #
-#########################################################################################################################################
+# It is advisable to read the file basic_configuration.yml and advanced_configuration.yml to better understand how zMenu works
+#
+####################################################
 
 name: "&e★ #5d8d50ʙʟᴏᴄᴋs &e★"
+
 size: 54
+
+# Update Interval (https://docs.zmenu.dev/configurations/inventories#update-interval)
+#
+# This element allows to update the name and lore of the items present in the inventory and who will have the update element in true every second
+#
 updateInterval: 1
+
 patterns:
-  - "zshop_decoration"
-  - "zshop_return_home"
-  - "zshop_pagination"
+  - "zshop_decoration" # Pattern for the decoration of the inventory
+  - "zshop_return_home" # Pattern for the back button
+  - "zshop_pagination" # Pattern for the next and previous buttons
+
 items:
   # First page
   grass_block:
+    # Update name and lore every second
     update: true
     item:
       material: GRASS_BLOCK
     type: ZSHOP_ITEM
+    # Purchase price of the item
     buyPrice: 2
+    # Selling price of the item
     sellPrice: 1
     slot: 20
+    # Purchase limit for the server
+    # Allows you to create a purchase limit for the server, you must also specify when this limit will reset
     serverBuyLimit:
       limit: 100
       schedulerType: DAILY
@@ -47,6 +64,7 @@ items:
   dirt:
     item:
       material: DIRT
+      # You can choose the number of items that will be sold at the price just below. The purchase price per unit will therefore be 1.0 and the sale price per unit will be 0.15
       amount: 10
     type: ZSHOP_ITEM
     buyPrice: 10.0
@@ -92,7 +110,6 @@ items:
       - "&f» &7Buying price&8: &e%buyPrice% &f%realBuyPrice% &ax%zshop_modifier_buy% &c%zshop_modifier_buy_percent%%"
       - "&f» &7Selling price&8: &e%sellPrice% &f%realSellPrice% &ax%zshop_modifier_sell% &c+%zshop_modifier_sell_percent%%"
       - ""
-      # - "&f» &7Server sell limit&8: &f%serverSellAmount%&7/#d1d1d1%serverSellLimit%"
       - "&f» &7Player sell limit&8: &f%playerSellAmount%&7/#d1d1d1%playerSellLimit% &8(&7%zshop_limiter_time_player_sell_GRAVEL%&8)"
       - "&f» &7Player buy limit&8: &f%playerBuyAmount%&7/#d1d1d1%playerBuyLimit% &8(&7%zshop_limiter_time_player_buy_GRAVEL%&8)"
       - ""
