--- a/src/main/resources/inventories/1_13/confirm.yml
+++ b/src/main/resources/inventories/1_13/confirm.yml
@@ -1,4 +1,4 @@
-#########################################################################################################################################
+####################################################
 #
 #  ███████╗░██████╗██╗░░██╗░█████╗░██████╗░
 #  ╚════██║██╔════╝██║░░██║██╔══██╗██╔══██╗
@@ -7,16 +7,22 @@
 #  ███████╗██████╔╝██║░░██║╚█████╔╝██║░░░░░
 #  ╚══════╝╚═════╝░╚═╝░░╚═╝░╚════╝░╚═╝░░░░░
 #
-# Documentation : https://zshop.groupez.dev/
-# Sponsor : https://serveur-minecraft-vote.fr/
-# zMenu Documentation : https://docs.zmenu.dev/
+#   zShop uses the zMenu API for inventory configurations.
+#   zMenu documentation : https://docs.zmenu.dev/
+#   zShop documentation : https://zshop.groupez.dev/
+#   Discord: https://discord.groupez.dev
+#   Sponsor: https://serveur-minecraft-vote.fr/
 #
-#########################################################################################################################################
+# It is advisable to read the file basic_configuration.yml and advanced_configuration.yml to better understand how zMenu works
+#
+# In this configuration you will find the confirm inventory, this inventory allows you to confirm a purchase with an ZSHOP_ITEM_CONFIRM
+#
+####################################################
 
 name: "&e★ &3ᴘᴜʀᴄʜᴀsᴇ &e★"
 size: 54
 patterns:
-  - "zshop_decoration"
+  - "zshop_decoration" # Pattern for the decoration of the inventory
   - "zshop_back"
 items:
   show_item:
