--- a/src/main/resources/inventories/1_13/main_shop.yml
+++ b/src/main/resources/inventories/1_13/main_shop.yml
@@ -1,4 +1,4 @@
-#########################################################################################################################################
+####################################################
 #
 #  ███████╗░██████╗██╗░░██╗░█████╗░██████╗░
 #  ╚════██║██╔════╝██║░░██║██╔══██╗██╔══██╗
@@ -7,28 +7,82 @@
 #  ███████╗██████╔╝██║░░██║╚█████╔╝██║░░░░░
 #  ╚══════╝╚═════╝░╚═╝░░╚═╝░╚════╝░╚═╝░░░░░
 #
-# Documentation : https://zshop.groupez.dev/
-# Sponsor : https://serveur-minecraft-vote.fr/
-# zMenu Documentation : https://docs.zmenu.dev/
+#   zShop uses the zMenu API for inventory configurations.
+#   zMenu documentation : https://docs.zmenu.dev/
+#   zShop documentation : https://zshop.groupez.dev/
+#   Discord: https://discord.groupez.dev
+#   Sponsor: https://serveur-minecraft-vote.fr/
 #
-#########################################################################################################################################
+# It is advisable to read the file basic_configuration.yml and advanced_configuration.yml to better understand how zMenu works
+#
+# In this configuration you will find the main inventory of the plugin, this inventory will make the link between all the others.
+# All information about the configuration of a category is present in the file categories/blocks.yml
+#
+####################################################
 
+# Inventory name (https://docs.zmenu.dev/configurations/inventories#name)
+#
+# This is the title of your inventory. You can put anything in it.
+# Color code and placeholders are supported.
+# If you are on Paper, Purpur or PufferFish you have access to the color code of MiniMessage (https://docs.advntr.dev/minimessage/format.html)
+#
 name: "&e★ &3ᴢsʜᴏᴘ &e★"
+
+# Size (https://docs.zmenu.dev/configurations/inventories#size)
+#
+# Allows to set the size of the inventory.
+# The inventory size must be a multiple of 9. So you can put 9, 18, 27, 36, 45 and 54
+# If this option is not present in the configuration, then the default will be 54
+#
 size: 54
+
+# Patterns (https://docs.zmenu.dev/configurations/patterns)
+#
+# Patterns allow you to have to create buttons that can be used in several inventories.
+# Thus, you do not need to repeat your configuration but only to specify the name of the father.
+# The patterns are in the zShop/patterns folder.
+#
+# To add a father you only need to specify the name you put in the father’s file.
+#
 patterns:
-  - "zshop_decoration"
+  - "zshop_decoration" # Pattern for the decoration of the inventory
+
+# Item section. (https://docs.zmenu.dev/configurations/inventories#items)
+#
+# This is where you will add all the items that will be present in your inventory.
+# With zMenu, each item is a Button. A button will allow you to perform specific actions, such as opening a new inventory, changing pages, going back.
+# By default, the button will be of type NONE. All buttons will have the same configuration elements.
+# Only buttons with types like INVENTORY, BACK etc... will have specific configuration elements.
+# All button information here: https://docs.zmenu.dev/configurations/buttons
+#
 items:
+  # INVENTORY BUTTON (https://docs.zmenu.dev/configurations/buttons#inventory)
+  #
+  # This button type allows you to navigate between different inventory. You will need to specify the name of the inventory, as well as the plugin from where the inventory was created.
+  # It is important to specify the name of the plugin, let’s imagine that inventory several inventories use the same name, its would be impossible to find the right one.
+  # By specifying the plugin name you will not have a problem. By default, the plugin used will be zMenu
+  #
+  # In this example, the button will open the inventory "blocks" of the plugin "zShop"
+  #
   block:
+    # You will now specify the content of your item. The item will include all configuration items that will be displayed in the inventory, name, lore etc.
+    # https://docs.zmenu.dev/configurations/items
     item:
       material: GRASS_BLOCK
       name: "#5d8d50ʙʟᴏᴄᴋs"
       lore:
         - ""
         - "&f➥ &7Click to access the #5d8d50blocks"
+    # As indicated, each button will have a specific type. To specify the type of button you must put this. (https://docs.zmenu.dev/configurations/buttons#type)
+    # By default, the type will be NONE, so you must set this value only if your button is something other than NONE.
     type: INVENTORY
+    # Specific configuration for the inventory type button, you must specify the inventory as well as the plugin that must be opened
     inventory: "blocks"
     plugin: "zShop"
+    # Slots that you want to put the item. Starts from 0 (https://docs.zmenu.dev/configurations/buttons#slot)
     slot: 21
+
+  # For the rest of the buttons in this inventory it is exactly the same, they will all open a different inventory.
   farm:
     item:
       material: CARROT
@@ -40,6 +94,7 @@ items:
     inventory: "farms"
     plugin: "zShop"
     slot: 23
+
   ores:
     item:
       material: IRON_INGOT
@@ -51,6 +106,7 @@ items:
     inventory: "ores"
     plugin: "zShop"
     slot: 31
+
   redstone:
     item:
       material: REDSTONE_BLOCK
@@ -62,6 +118,7 @@ items:
     inventory: "redstones"
     plugin: "zShop"
     slot: 29
+
   miscellaneous:
     item:
       material: HOPPER
@@ -73,6 +130,7 @@ items:
     inventory: "mics"
     plugin: "zShop"
     slot: 33
+
   mobs:
     item:
       material: ROTTEN_FLESH
@@ -83,10 +141,12 @@ items:
     type: INVENTORY
     inventory: "mobs"
     slot: 39
+
   armor:
     item:
       material: DIAMOND_HELMET
       name: "#49ead6ᴀʀᴍᴏʀs"
+      # We have armor, so we will remove its attributes (https://docs.zmenu.dev/configurations/items#flags)
       flags:
         - HIDE_ATTRIBUTES
       lore:
