--- a/pom.xml
+++ b/pom.xml
@@ -174,5 +174,12 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/CoinsEngine.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>me.mraxetv.beasttokens.apo</groupId>
+            <artifactId>BeastTokensAPI</artifactId>
+            <version>3.11.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/bt-api-3.11.0.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
