--- a/src/main/resources/economies.yml
+++ b/src/main/resources/economies.yml
@@ -19,6 +19,7 @@
 # - VOTINGPLUGIN (requires https://www.spigotmc.org/resources/votingplugin.15358/)
 # - TOKENMANAGER (requires https://www.spigotmc.org/resources/tokenmanager.8610/)
 # - COINSENGINE (requires https://www.spigotmc.org/resources/84121/)
+# - BEASTTOKEN (requires https://www.spigotmc.org/resources/20806/)
 #
 #########################################################################################################################################
 
