--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ website: https://groupez.dev
 description: Shop plugin
 version: 3.0.7
 api-version: 1.13
+folia-supported: true
 depend:
   - zMenu
 softdepend:
