--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
             <version>2.12.0</version>
         </dependency>
         <dependency>
+            <groupId>me.mraxetv.beasttokens.apo</groupId>
+            <artifactId>BeastTokensAPI</artifactId>
+            <version>3.11.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/bt-api-3.11.0.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>su.nightexpress.coinsengine</groupId>
             <artifactId>CoinsEngine</artifactId>
             <version>2.0.9</version>
@@ -175,11 +182,18 @@
             <systemPath>${project.basedir}/libs/CoinsEngine.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>me.mraxetv.beasttokens.apo</groupId>
-            <artifactId>BeastTokensAPI</artifactId>
-            <version>3.11.0</version>
+            <groupId>su.nexmedia.engine</groupId>
+            <artifactId>Nightcore</artifactId>
+            <version>2.5.1</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/libs/bt-api-3.11.0.jar</systemPath>
+            <systemPath>${project.basedir}/libs/NexEngine.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>su.nexmedia.core</groupId>
+            <artifactId>Nightcore</artifactId>
+            <version>2.5.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/n.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
