--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -86,10 +86,10 @@ dateFormat: "EEEE, d MMM yyyy HH:mm:ss"
 # Disable only item flags for item display
 disableItemFlag: true
 
-# Check if the inventory is full during the purchase, if the option is disabled then the items purchased will be thrown to the ground if the player has full inventory
+# Check if the inventory is full during the purchase, if the option is disabled, then the items purchased will be thrown to the ground if the player has full inventory
 enableInventoryFullBuy: true
 
-# Allows to change the sale or serious purchase price has permission
+# Allows changing the sale or serious purchase price has permission
 pricesModifier:
   - permission: "zshop.prices.vip"
     type: SELL
