--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>com.github.Traqueur-dev</groupId>
             <artifactId>CurrenciesAPI</artifactId>
-            <version>a6cd17464d</version>
+            <version>1.0.5</version>
         </dependency>
     </dependencies>
 </project>
